10/07/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/include/tgdb.h, tgdb-base/src/tgdb.c 
	(tgdb_send_debugger_data): Replaced by 
	tgdb_send_debugger_console_command function.
	(tgdb_send_debugger_console_command): Replaced the above function.
	* tgdb-base/src/driver.c (rlctx_send_user_command): TGDB interface
	changed. Update driver.

10/06/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/driver.c (term_attributes): Add global.
	(main): Call tty_get_attributes to get terminal attributes.
	(main): Call tty_off_xon_xoff on readline's masterfd.
	(main): Changed call from tty_reset to tty_set_attributes.


09/30/2005 Bob Rossi <bob@brasko.net>

	* gdbmi/src/gdbmi_tgdb.c (gdbmi_parse_io): Initialize sytle variable.

09/30/2005 Bob Rossi <bob@brasko.net>

	* a2-tgdb.h (a2_get_tty_name): Add const qualifier to return val.
	* annotate_two.h (#include): fork_util.h
	(struct annotate_two): Replaced fields with pty_pair structure.
	* commands.h (COMMAND_STATE): Add COMPLETE field.
	(commands_send_gui_completions): Add function.
	* globals.h (global_set_start_completion,global_has_completion_started,
	global_reset_completion_started): Add functions.
	* annotate-two/src/Makefile.am (AM_CFLAGS): Remove rlctx include.
	(libannotate_two_a_DEPENDENCIES): Ditto.
	* annotate-two/src/Makefile.am: Autogenerated.
	* a2-tgdb.c,annotate.c,commands.c,data.c,globals.c,state_machine.c:
	Update for rl branch import. TGDB no longer supports readline.
	* tgdb.h (tgdb_initialize): Remove readline_fd parameter.
	(Add callback functions): Added prompt_change,
	tgdb_set_prompt_change_callback, prompt_update,
	tgdb_set_prompt_update_callback.
	(tgdb_is_busy): Add function.
	(tgdb_send_debugger_char,tgdb_recv_readline_data): Remove functions.
	(tgdb_get_command): Changed name to tgdb_get_response.
	(tgdb_traverse_commands): Changed name to tgdb_traverse_responses.
	(tgdb_delete_commands): Changed name to tgdb_delete_responses.
	(tgdb_complete): Add new tab completion function.